# COMP-3600

./: .gitignore  README.md
bmw/: Form1.Designer.cs  Form1.cs  Makefile  Program.cs
emoji/: Form1.Designer.cs  Form1.cs  Makefile  Program.cs  README.md  algo.sln  emoji.csproj  emoji.sln
emoji2/: Form1.Designer.cs  Form1.cs  Makefile  Program.cs
flag/: Form1.Designer.cs  Form1.cs  Makefile  Program.cs  README.md
ghosts/: CLAUDE.md  Form1.Designer.cs  Form1.cs  Makefile  Program.cs
inicial/: Form1.Designer.cs  Form1.cs  Makefile  Program.cs  README.md
inter/: Form1.Designer.cs  Form1.cs  Makefile  Program.cs  README.md
owl/: Form1.Designer.cs  Form1.cs  Makefile  Program.cs  README.md  owl.csproj
pacman/: Form1.Designer.cs  Form1.cs  Makefile  Program.cs  README.md  pacman.sln
solar-system/: README.md  solar-system.wrl
svg/: README.md
vrml/: README.md  cabin.wrl  cylinder.vrml  fireplace.wrl  forest.wrl  ground.wrl  pool.wrl  pyproject.toml  trees.wrl  vrml.ipynb
