[project]
name = "vrml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyvista>=0.47.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pyright>=1.1.408",
    "nest-asyncio2>=1.7.2",
    "trame>=3.12.0",
    "trame-vtk>=2.11.1",
    "trame-vuetify>=3.2.1",
]
